ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/rewrite-target":"/$2","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"ai-detector","namespace":"microservices"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"ai-detector","port":{"number":8000}}},"path":"/ai-detector(/|$)(.*)","pathType":"ImplementationSpecific"}]}},{"host":"ai-detector.fortifai.com","http":{"paths": [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2025-04-04T08:02:31Z"
  generation: 1
  name: ai-detector
  namespace: microservices
  resourceVersion: "1597974"
  uid: 7e93b521-f8dc-4d50-9190-a4f11e6278cc
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ai-detector
            port:
              number: 8000
        path: /ai-detector(/|$)(.*)
        pathType: ImplementationSpecific
  - host: ai-detector.fortifai.com
    http:
      paths:
      - backend:
          service:
            name: ai-detector
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: a12c65672e20e491e83c7a13c5662714-1758004955.eu-north-1.elb.amazonaws.com
